--- a/index.html
+++ b/index.html
@@ -8,52 +8,58 @@
 </head>
 <body>
     <header>
-        <div id="header-logo">
-            <a href="">
-                <img src="img/header-logo.png" alt="POTEPAN CAMP">
-            </a>
+        <div class="content-width" id="header-flex">
+            <div id="header-logo">
+                <a href="">
+                    <img src="img/header-logo.png" alt="POTEPAN CAMP">
+                </a>
+            </div>
+            <ul id="header-menu">
+                <li>
+                    <a href=""><span class="en-menu">ABOUT</span><br><span class="ja-menu">初めての方へ</span></a>
+                </li>
+                <li>
+                    <a href=""><span class="en-menu">FLOW</span><br><span class="ja-menu">卒業までの流れ</span></a>
+                </li>
+                <li>
+                    <a href=""><span class="en-menu">COURSE</span><br><span class="ja-menu">コース・料金</span></a>
+                </li>
+                <li>
+                    <a href=""><span class="en-menu">INTERVIEW</span><br><span class="ja-menu">受講者の声</span></a>
+                </li>
+                <li>
+                    <a href=""><span class="en-menu">FAQ</span><br><span class="ja-menu">よくある質問</span></a>
+                </li>
+                <li>
+                    <a href=""><span class="en-menu">COMPANY</span><br><span class="ja-menu">会社概要</span></a>
+                </li>
+                <li id="header-btn">
+                    <a href="" class="counseling">無料カウンセリング</a>
+                </li>
+            </ul>
         </div>
-        <ul id="header-menu">
-            <li>
-                <a href=""><span class="en-menu">ABOUT</span><br><span class="ja-menu">初めての方へ</span></a>
-            </li>
-            <li>
-                <a href=""><span class="en-menu">FLOW</span><br><span class="ja-menu">卒業までの流れ</span></a>
-            </li>
-            <li>
-                <a href=""><span class="en-menu">COURSE</span><br><span class="ja-menu">コース・料金</span></a>
-            </li>
-            <li>
-                <a href=""><span class="en-menu">INTERVIEW</span><br><span class="ja-menu">受講者の声</span></a>
-            </li>
-            <li>
-                <a href=""><span class="en-menu">FAQ</span><br><span class="ja-menu">よくある質問</span></a>
-            </li>
-            <li>
-                <a href=""><span class="en-menu">COMPANY</span><br><span class="ja-menu">会社概要</span></a>
-            </li>
-            <li id="counseling">
-                <a href="">無料カウンセリング</a>
-            </li>
-        </ul>
     </header>
     <main>
         <section id="fv">
-            <div id="fv-wrap">
-                <div id="fv-message">
-                    <div id="fv-logo">
-                        <img src="img/fv-logo.png" alt="POTEPAN CAMP">
+            <div class="content-width">
+                <div class="flex" id="fv-message-wrap">
+                    <div id="fv-message">
+                        <div id="fv-logo">
+                            <img src="img/fv-logo.png" alt="POTEPAN CAMP">
+                        </div>
+                        <p>本気で<span>WEBエンジニア</span>を目指すなら、<br>本気のプログラミング学習。</p>
+                        <div id="fv-btn">
+                            <a href="" class="counseling">無料カウンセリング</a>
+                        </div>
                     </div>
-                    <p>本気でWEBエンジニアを目指すなら、<br>本気のプログラミング学習。</p>
-                    <a href="">無料カウンセリング</a>
+                    <div id="badge-number1">
+                        <img src="img/badge-number1.svg" alt="プログラミングスクールでWEBエンジニア輩出※NO.1">
+                    </div>
                 </div>
-                <div id="badge-number1">
-                    <img src="img/badge-number1.svg" alt="プログラミングスクールでWEBエンジニア輩出※NO.1">
+                <div id="caution">
+                    <p>※ショッパーズアイ「プログラミングスクール10社を対象にしたサイト比較イメージ調査（2020 年 5 月 22 日～25 日）」より
+                        全国の22～49歳の男女691名へのインターネット調査</p>
                 </div>
-            </div>
-            <div id="caution">
-                <p>※ショッパーズアイ「プログラミングスクール10社を対象にしたサイト比較イメージ調査（2020 年 5 月 22 日～25 日）」より
-                    全国の22～49歳の男女691名へのインターネット調査</p>
             </div>
         </section>
     </main>
