Add gakuwari-section movie-section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <img src="img/header-logo.png" alt="POTEPAN CAMP">
                 </a>
             </div>
-            <ul id="header-menu">
+            <ul class="flex">
                 <li>
                     <a href=""><span class="en-menu">ABOUT</span><br><span class="ja-menu">初めての方へ</span></a>
                 </li>
@@ -60,6 +60,36 @@
                     <p>※ショッパーズアイ「プログラミングスクール10社を対象にしたサイト比較イメージ調査（2020 年 5 月 22 日～25 日）」より
                         全国の22～49歳の男女691名へのインターネット調査</p>
                 </div>
+            </div>
+        </section>
+        <section id="about">
+            <div class="content-width">
+                <div id="gakuwari">
+                    <img src="img/gakuwari.png" alt="ポテパンキャンンプの学割">
+                </div>
+                <div class="flex">
+                    <div id="about-message">
+                        <h2><span>POTEPAN CAMP</span>とは</h2>
+                        <p>卒業生の多くがWebエンジニアに転職成功している、
+                            実績豊富なプログラミングスクール。優秀なレビュアー陣と実践的なカリキュラムで、
+                            現場で求められる開発スキルを身につけることが可能です。</p>
+                    </div>
+                    <div id="about-btn">
+                        <a href="" class="counseling">
+                            <span id="about-btn-span1">ABOUT</span>
+                            <span id="about-btn-span2">はじめての方へ</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="main-section">
+            <div class="section-header">
+                <h2>MOVIE</h2>
+                <p>WEB CM 放映中！</p>
+            </div>
+            <div id="movie">
+                <iframe width="836" height="470" src="https://www.youtube.com/embed/rHGR0bAlNC8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
     </main>
