--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <img src="img/header-logo.png" alt="POTEPAN CAMP">
                 </a>
             </div>
-            <ul class="flex">
+            <ul class="flex" id="header-menu">
                 <li>
                     <a href=""><span class="en-menu">ABOUT</span><br><span class="ja-menu">初めての方へ</span></a>
                 </li>
