Add features section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a href=""><span class="en-menu">COMPANY</span><br><span class="ja-menu">会社概要</span></a>
                 </li>
                 <li id="header-btn">
-                    <a href="" class="counseling">無料カウンセリング</a>
+                    <a href="" class="link-btn">無料カウンセリング</a>
                 </li>
             </ul>
         </div>
@@ -49,7 +49,7 @@
                         </div>
                         <p>本気で<span>WEBエンジニア</span>を目指すなら、<br>本気のプログラミング学習。</p>
                         <div id="fv-btn">
-                            <a href="" class="counseling">無料カウンセリング</a>
+                            <a href="" class="link-btn">無料カウンセリング</a>
                         </div>
                     </div>
                     <div id="badge-number1">
@@ -75,7 +75,7 @@
                             現場で求められる開発スキルを身につけることが可能です。</p>
                     </div>
                     <div id="about-btn">
-                        <a href="" class="counseling">
+                        <a href="" class="link-btn">
                             <span id="about-btn-span1">ABOUT</span>
                             <span id="about-btn-span2">はじめての方へ</span>
                         </a>
@@ -88,8 +88,155 @@
                 <h2>MOVIE</h2>
                 <p>WEB CM 放映中！</p>
             </div>
-            <div id="movie">
+            <div class="section-content" id="movie">
                 <iframe width="836" height="470" src="https://www.youtube.com/embed/rHGR0bAlNC8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </section>
+        <section class="main-section">
+            <div class="section-header">
+                <h2>POTEPAN CAMPの特徴</h2>
+                <p>POTEPAN CAMPが選ばれる理由</p>
+            </div>
+            <div class="content-width section-content">
+                <p class="list-no">01</p>
+                <div class="features">
+                    <h3>豊富な転職実績</h3>
+                    <p class="features-text">転職サポート希望者の多くが Web系エンジニアとして転職成功しております。<br>
+                        10000人以上の利用者を抱える転職サポートサービスを運営する当社だからこそ、<br>
+                        企業の求めている人材像に即した教育カリキュラムを反映できます。</p>
+                    <div class="example" id="example-company">
+                        <h4>
+                            転職先企業の例
+                            <img src="img/character.png" alt="キャラクター">
+                        </h4>
+                        <ul>
+                            <li>
+                                <img src="img/example-company01.png" alt="オウチーノ">
+                            </li>
+                            <li>
+                                <img src="img/example-company02.png" alt="IBJ">
+                            </li>
+                            <li>
+                                <img src="img/engineer-conpany-3.png" alt="grooves">
+                            </li>
+                            <li>
+                                <img src="img/example-company04.png" alt="SAKURA Internet">
+                            </li>
+                            <li>
+                                <img src="img/example-company05.png" alt="jiraffe">
+                            </li>
+                            <li>
+                                <img src="img/example-company06.png" alt="anydoor">
+                            </li>
+                            <li>
+                                <img src="img/example-company07.png" alt="BitStar">
+                            </li>
+                            <li>
+                                <img src="img/example-company08.png" alt="iDoctor">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="content-width">
+                <p class="list-no" id="list-no2">02</p>
+                <div class="features">
+                    <h3>多くの受講者受入実績</h3>
+                    <p class="features-text">サービス開始以降、累計<span>700</span>人以上がポテパンキャンプを受講。</p>
+                    <div class="example" id="example-data">
+                        <ul>
+                            <li>
+                                <img src="img/example-data01@2x.png" alt="データ1">
+                            </li>
+                            <li>
+                                <img src="img/example-data02.png" alt="データ2">
+                            </li>
+                            <li>
+                                <img src="img/example-data03.png" alt="データ3">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="content-width">
+                <p class="list-no" id="list-no3">03</p>
+                <div class="features">
+                    <h3>現役エンジニアが講師</h3>
+                    <p class="features-text">サービス開始以降、<span>50</span>人以上の現役エンジニアが講師として活躍中。</p>
+                    <div class="flex" id="example-engineer">
+                        <div class="example example-engineer">
+                            <div class="engineer-conpany">
+                                <img src="img/engineer-conpany-logo01.png" alt="grooves">
+                            </div>
+                            <div class="engineer-type">
+                                <img src="img/engineer-logo01.png" alt="アイコン">
+                                <p><span>株式会社grooves</span><br>Railsエンジニア</p>
+                            </div>
+                            <div class="engineer-message">
+                                <p>現場のように細かくレビューしていきますので、ただ動くだけではなく、保守性の高いコードが書けるように一緒に頑張っていきましょう。</p>
+                            </div>
+                        </div>
+                        <div class="example example-engineer">
+                            <div class="engineer-conpany">
+                                <img src="img/engineer-conpany-logo02.png" alt="Tutorial">
+                            </div>
+                            <div class="engineer-type">
+                                <img src="img/engineer-logo02.png" alt="アイコン">
+                                <p><span>株式会社チュートリアル</span><br>Railsエンジニア</p>
+                            </div>
+                            <div class="engineer-message">
+                                <p>プログラミングは難しいかもしれませんが、諦めずに続ければいつか絶対にわかる日が来ます。精一杯サポートしますので、最後まで一緒に頑張りましょう。</p>
+                            </div>
+                        </div>
+                        <div class="example example-engineer">
+                            <div class="engineer-conpany">
+                                <img src="img/engineer-conpany-logo03.png" alt="Readyfor">
+                            </div>
+                            <div class="engineer-type">
+                                <img src="img/engineer-logo03.png" alt="アイコン">
+                                <p><span>株式会社Readyfor</span><br>Railsエンジニア</p>
+                            </div>
+                            <div class="engineer-message">
+                                <p>プログラミングの上達には根気強くプログラミングを書くしかありません。わからない点はサポートしますので一緒に頑張っていきましょう。</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="main-section">
+            <div class="section-header">
+                <h2>POTEPAN CAMPの選べるコース</h2>
+                <p>POTEPAN CAMPでは複数のコースから目的別で選べる</p>
+            </div>
+            <div>
+                <a href="">
+                    <div>
+                        <p>Webアプリケーション<br>コース</p>
+                    </div>
+                    <div>
+                        <p>初心者からプログラミングを使えるようになるためのスタンダードコース</p>
+                        <p>応募条件</p>
+                        <p>Windows or MacのPCを持っている方</p>
+                    </div>
+                    <div>詳しくはこちら</div>
+                </a>
+            </div>
+            <div>
+                <a href="">
+                    <div>
+                        <p>Railsキャリア<br>コース</p>
+                    </div>
+                    <div>
+                        <p>初心者からエンジニア転職を目指す方向けのエキスパートコース</p>
+                        <p>応募条件</p>
+                        <p>MacのPCを持っている方</p>
+                    </div>
+                    <div>詳しくはこちら</div>
+                </a>
+            </div>
+            <div>
+                <a href=""><span>COURSE</span><span>コース・料金</span></a>
             </div>
         </section>
     </main>
