Add message interview section

--- a/index.html
+++ b/index.html
@@ -204,39 +204,114 @@
                 </div>
             </div>
         </section>
+        <section class="main-section" id="select-course">
+            <div class="content-width bg-logo">
+                <div class="section-header">
+                    <h2>POTEPAN CAMPの選べるコース</h2>
+                    <p>POTEPAN CAMPでは複数のコースから目的別で選べる</p>
+                </div>
+                <div class="section-content">
+                    <div id="courses">
+                        <a class="course flex" href="">
+                            <div class="course-name">
+                                <h3>Webアプリケーション<br>コース</h3>
+                            </div>
+                            <div class="about-course">
+                                <p class="course-text orange">初心者からプログラミングを使えるようになるためのスタンダードコース</p>
+                                <p class="application-conditions">応募条件</p>
+                                <p class="conditions">Windows or MacのPCを持っている方</p>
+                                <p class="detail">詳しくはこちら</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div id="courses">
+                        <a class="course flex" href="">
+                            <div class="course-name">
+                                <h3>Railsキャリア<br>コース</h3>
+                            </div>
+                            <div class="about-course">
+                                <p class="course-text red">初心者からエンジニア転職を目指す方向けのエキスパートコース</p>
+                                <p class="application-conditions">応募条件</p>
+                                <p class="conditions">MacのPCを持っている方</p>
+                                <p class="detail">詳しくはこちら</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="main-link-btn">
+                        <a href="" class="link-btn" id="course-price-btn"><span>COURSE</span><span>コース・料金</span></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="main-section bg-beige">
+            <div class="content-width">
+                <div class="section-header">
+                    <h2>サービスの想い</h2>
+                    <p>ポテパンのプログラミング学習についてかける想い</p>
+                </div>
+                <div class="section-content flex">
+                    <div>
+                        <h3 id="message-title">MESSAGE</h3>
+                        <div id="message">
+                            <p>ポテパンではエンジニア転職支援サービスを運営しており、
+                                8000名以上のエンジニア様と1500社以上の採用企業様と取引がございます。
+                                開発がしっかりとできるエンジニアを育て、
+                                エンジニア不足を解決できないかと考えスクール事業を始めました。<br><br>
+                                エンジニア転職のノウハウと、企業側から随時フィードバックをもらうことで、
+                                エンジニアになる上での最適なカリキュラムをご用意することができました。
+                                ゴールに向かい無駄なものをそぎ落とす事で高品質で、低価格なスクールとなっております。<br><br>
+                                エンジニアになりたい」「サービスを作りたい」など本気でプログラミングを勉強したいという方に、是非ご利用いただければと思っております。
+                            </p>
+                        </div>
+                    </div>
+                    <div id="message-img">
+                        <img src="img/message-thumbnail.png" alt="株式会社ポテパン代表取締役宮崎">
+                        <p>株式会社ポテパン<br>代表取締役<span>宮崎</span></p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="main-section">
-            <div class="section-header">
-                <h2>POTEPAN CAMPの選べるコース</h2>
-                <p>POTEPAN CAMPでは複数のコースから目的別で選べる</p>
-            </div>
-            <div>
-                <a href="">
-                    <div>
-                        <p>Webアプリケーション<br>コース</p>
+            <div class="content-width">
+                <div class="section-header">
+                    <h2>受講生の声</h2>
+                    <p>当スクールの卒業生にインタビュー</p>
+                </div>
+                <div class="section-content">
+                    <div class="flex" id="students">
+                        <div class="student">
+                            <img src="img/interview1.jpeg" alt="受講生1">
+                            <div class="student-info">
+                                <p>選抜クラス キャリアコース</p>
+                                <p><span>H.Y</span>さん<span>前職：メガネ量販店の販売員</span></p>
+                            </div>
+                            <p class="student-text">30歳で、メガネ量販店の販売員から受託企業のエンジニアに転職成功されたH.Yさん。
+                                30歳での未経験転職の心得などお伺いしました！</p>
+                        </div>
+                        <div class="student">
+                            <img src="img/interview2.jpeg" alt="受講生1">
+                            <div class="student-info">
+                                <p>選抜クラス ビギナーコース</p>
+                                <p><span>A.K</span>さん<span>前職：セラピスト</span></p>
+                            </div>
+                            <p class="student-text">美容師やセラピストとして働かれたあとに、
+                                ポテパンキャンプを受講し美容系スタートアップにWebエンジニアとして転職成功されたA.Kさん。
+                                異業種からの転職成功の秘訣をお伺いしました！</p>
+                        </div>
+                        <div class="student">
+                            <img src="img/interview3.jpeg" alt="受講生1">
+                            <div class="student-info">
+                                <p>選抜クラス ビギナーコース</p>
+                                <p><span>S.Y</span>さん<span>前職：コンサルティングファーム</span></p>
+                            </div>
+                            <p class="student-text">コンサルティングファームからスタートアップにWebエンジニアとして転職したS.Yさん。
+                                全くの異業種からエンジニアに転職された背景についてお伺いしました！</p>
+                        </div>
                     </div>
-                    <div>
-                        <p>初心者からプログラミングを使えるようになるためのスタンダードコース</p>
-                        <p>応募条件</p>
-                        <p>Windows or MacのPCを持っている方</p>
+                    <div class="main-link-btn interview">
+                        <a href="" class="link-btn" id="course-price-btn"><span>INTERVIEW</span><span>受講者の声</span></a>
                     </div>
-                    <div>詳しくはこちら</div>
-                </a>
-            </div>
-            <div>
-                <a href="">
-                    <div>
-                        <p>Railsキャリア<br>コース</p>
-                    </div>
-                    <div>
-                        <p>初心者からエンジニア転職を目指す方向けのエキスパートコース</p>
-                        <p>応募条件</p>
-                        <p>MacのPCを持っている方</p>
-                    </div>
-                    <div>詳しくはこちら</div>
-                </a>
-            </div>
-            <div>
-                <a href=""><span>COURSE</span><span>コース・料金</span></a>
+                </div>
             </div>
         </section>
     </main>
