Add service section

--- a/index.html
+++ b/index.html
@@ -10,31 +10,31 @@
     <header>
         <div class="content-width" id="header-flex">
             <div id="header-logo">
-                <a href="">
+                <a href="index.html">
                     <img src="img/header-logo.png" alt="POTEPAN CAMP">
                 </a>
             </div>
             <ul class="flex" id="header-menu">
                 <li>
-                    <a href=""><span class="en-menu">ABOUT</span><br><span class="ja-menu">初めての方へ</span></a>
+                    <a href="https://camp.potepan.com/about"><span class="en-menu">ABOUT</span><br><span class="ja-menu">初めての方へ</span></a>
                 </li>
                 <li>
-                    <a href=""><span class="en-menu">FLOW</span><br><span class="ja-menu">卒業までの流れ</span></a>
+                    <a href="https://camp.potepan.com/flow"><span class="en-menu">FLOW</span><br><span class="ja-menu">卒業までの流れ</span></a>
                 </li>
                 <li>
-                    <a href=""><span class="en-menu">COURSE</span><br><span class="ja-menu">コース・料金</span></a>
+                    <a href="https://camp.potepan.com/course"><span class="en-menu">COURSE</span><br><span class="ja-menu">コース・料金</span></a>
                 </li>
                 <li>
-                    <a href=""><span class="en-menu">INTERVIEW</span><br><span class="ja-menu">受講者の声</span></a>
+                    <a href="https://camp.potepan.com/interview"><span class="en-menu">INTERVIEW</span><br><span class="ja-menu">受講者の声</span></a>
                 </li>
                 <li>
-                    <a href=""><span class="en-menu">FAQ</span><br><span class="ja-menu">よくある質問</span></a>
+                    <a href="https://camp.potepan.com/faq"><span class="en-menu">FAQ</span><br><span class="ja-menu">よくある質問</span></a>
                 </li>
                 <li>
-                    <a href=""><span class="en-menu">COMPANY</span><br><span class="ja-menu">会社概要</span></a>
+                    <a href="https://camp.potepan.com/company"><span class="en-menu">COMPANY</span><br><span class="ja-menu">会社概要</span></a>
                 </li>
                 <li id="header-btn">
-                    <a href="" class="link-btn">無料カウンセリング</a>
+                    <a href="https://camp.potepan.com/contact" class="link-btn">無料カウンセリング</a>
                 </li>
             </ul>
         </div>
@@ -49,7 +49,7 @@
                         </div>
                         <p>本気で<span>WEBエンジニア</span>を目指すなら、<br>本気のプログラミング学習。</p>
                         <div id="fv-btn">
-                            <a href="" class="link-btn">無料カウンセリング</a>
+                            <a href="https://camp.potepan.com/contact" class="link-btn">無料カウンセリング</a>
                         </div>
                     </div>
                     <div id="badge-number1">
@@ -75,9 +75,7 @@
                             現場で求められる開発スキルを身につけることが可能です。</p>
                     </div>
                     <div id="about-btn">
-                        <a href="" class="link-btn">
-                            <span id="about-btn-span1">ABOUT</span>
-                            <span id="about-btn-span2">はじめての方へ</span>
+                        <a href="https://camp.potepan.com/about/" class="link-btn"><span>ABOUT</span><span>はじめての方へ</span>
                         </a>
                     </div>
                 </div>
@@ -204,7 +202,7 @@
                 </div>
             </div>
         </section>
-        <section class="main-section" id="select-course">
+        <section class="main-section bg-gray">
             <div class="content-width bg-logo">
                 <div class="section-header">
                     <h2>POTEPAN CAMPの選べるコース</h2>
@@ -212,7 +210,7 @@
                 </div>
                 <div class="section-content">
                     <div id="courses">
-                        <a class="course flex" href="">
+                        <a class="course flex" href="https://camp.potepan.com/course/#webapp">
                             <div class="course-name">
                                 <h3>Webアプリケーション<br>コース</h3>
                             </div>
@@ -225,7 +223,7 @@
                         </a>
                     </div>
                     <div id="courses">
-                        <a class="course flex" href="">
+                        <a class="course flex" href="https://camp.potepan.com/course/#railscareer">
                             <div class="course-name">
                                 <h3>Railsキャリア<br>コース</h3>
                             </div>
@@ -238,7 +236,7 @@
                         </a>
                     </div>
                     <div class="main-link-btn">
-                        <a href="" class="link-btn" id="course-price-btn"><span>COURSE</span><span>コース・料金</span></a>
+                        <a href="https://camp.potepan.com/course" class="link-btn"><span>COURSE</span><span>コース・料金</span></a>
                     </div>
                 </div>
             </div>
@@ -278,39 +276,79 @@
                     <p>当スクールの卒業生にインタビュー</p>
                 </div>
                 <div class="section-content">
-                    <div class="flex" id="students">
+                    <div class="flex-align-start" id="students">
                         <div class="student">
-                            <img src="img/interview1.jpeg" alt="受講生1">
-                            <div class="student-info">
-                                <p>選抜クラス キャリアコース</p>
-                                <p><span>H.Y</span>さん<span>前職：メガネ量販店の販売員</span></p>
-                            </div>
-                            <p class="student-text">30歳で、メガネ量販店の販売員から受託企業のエンジニアに転職成功されたH.Yさん。
-                                30歳での未経験転職の心得などお伺いしました！</p>
+                            <a href="https://camp.potepan.com/interview/691">
+                                <div class="student-thumnail">
+                                    <img src="img/interview1.jpeg" alt="受講生1">
+                                    <div class="student-info">
+                                        <p>選抜クラス キャリアコース</p>
+                                        <p><span>H.Y</span>さん<span>前職：メガネ量販店の販売員</span></p>
+                                    </div>
+                                </div>
+                                <p class="student-text">30歳で、メガネ量販店の販売員から受託企業のエンジニアに転職成功されたH.Yさん。
+                                    30歳での未経験転職の心得などお伺いしました！</p>
+                            </a>
                         </div>
                         <div class="student">
-                            <img src="img/interview2.jpeg" alt="受講生1">
-                            <div class="student-info">
-                                <p>選抜クラス ビギナーコース</p>
-                                <p><span>A.K</span>さん<span>前職：セラピスト</span></p>
-                            </div>
-                            <p class="student-text">美容師やセラピストとして働かれたあとに、
-                                ポテパンキャンプを受講し美容系スタートアップにWebエンジニアとして転職成功されたA.Kさん。
-                                異業種からの転職成功の秘訣をお伺いしました！</p>
+                            <a href="https://camp.potepan.com/interview/682">
+                                <div class="student-thumnail">
+                                    <img src="img/interview2.jpeg" alt="受講生1">
+                                    <div class="student-info">
+                                        <p>選抜クラス ビギナーコース</p>
+                                        <p><span>A.K</span>さん<span>前職：セラピスト</span></p>
+                                    </div>
+                                </div>
+                                <p class="student-text">美容師やセラピストとして働かれたあとに、
+                                    ポテパンキャンプを受講し美容系スタートアップにWebエンジニアとして転職成功されたA.Kさん。
+                                    異業種からの転職成功の秘訣をお伺いしました！</p>
+                            </a>
                         </div>
                         <div class="student">
-                            <img src="img/interview3.jpeg" alt="受講生1">
-                            <div class="student-info">
-                                <p>選抜クラス ビギナーコース</p>
-                                <p><span>S.Y</span>さん<span>前職：コンサルティングファーム</span></p>
-                            </div>
-                            <p class="student-text">コンサルティングファームからスタートアップにWebエンジニアとして転職したS.Yさん。
-                                全くの異業種からエンジニアに転職された背景についてお伺いしました！</p>
+                            <a href="https://camp.potepan.com/interview/675">
+                                <div class="student-thumnail">
+                                    <img src="img/interview3.jpeg" alt="受講生1">
+                                    <div class="student-info">
+                                        <p>選抜クラス ビギナーコース</p>
+                                        <p><span>S.Y</span>さん<span>前職：コンサルティングファーム</span></p>
+                                    </div>
+                                </div>
+                                <p class="student-text">コンサルティングファームからスタートアップにWebエンジニアとして転職したS.Yさん。
+                                    全くの異業種からエンジニアに転職された背景についてお伺いしました！</p>
+                            </a>
                         </div>
                     </div>
                     <div class="main-link-btn interview">
-                        <a href="" class="link-btn" id="course-price-btn"><span>INTERVIEW</span><span>受講者の声</span></a>
+                        <a href="https://camp.potepan.com/interview" class="link-btn"><span>INTERVIEW</span><span>受講者の声</span></a>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section class="main-section bg-gray">
+            <div class="content-width bg-logo">
+                <div class="section-header">
+                    <h2>POTEPANが運用するサービス</h2>
+                    <p>ポテパンのサイトをチェック</p>
+                </div>
+                <div class="section-content flex-align-start">
+                    <a class="service-link" href="https://freelance.potepan.com/" target="blank">
+                        <div id="service-link-border1">
+                            <img src="img/service-media-thumbnail01.png" alt="ポテパンフリーランス">
+                        </div>
+                        <p>ポテパンフリーランスは、フリーランス初心者のエンジニアに案件情報を紹介するサービスです。</p>
+                    </a>
+                    <a class="service-link" href="https://career.potepan.com/" target="blank">
+                        <div id="service-link-border2">
+                            <img src="img/service-media-thumbnail02.png" alt="ポテパンキャリア">
+                        </div>
+                        <p>技術のわかるエージェントがあなたの転職をサポートするサービスです。</p>
+                    </a>
+                    <a class="service-link" href="https://style.potepan.com/" target="blank">
+                        <div id="service-link-border3">
+                            <img src="img/service-media-thumbnail04.png" alt="働くエンジニアマガジン">
+                        </div>
+                        <p>エンジニアのためのお役立ちコンテンツを厳選してお送りしているサービスです。</p>
+                    </a>
                 </div>
             </div>
         </section>
