--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="page-top">
     <header>
         <div class="content-width" id="header-flex">
             <div id="header-logo">
@@ -353,5 +353,62 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="content-width">
+            <a href="#page-top" id="page-top-btn">
+                <p id="page-top-arrow"></p>
+            </a>
+            <div class="flex-align-start">
+                <div id="company-info">
+                    <a href="index.html" id="footer-logo">
+                        <img src="img/footer-logo.png" alt="POTEPAN CAMP">
+                    </a>
+                    <div>
+                        <p>株式会社ポテパン</p>
+                        <p>〒150-0002</p>
+                        <p>東京都渋谷区渋谷2－2－5</p>
+                        <p>クルスビル7階</p>
+                    </div>
+                    <div id="sns-logo">
+                        <a href="https://www.facebook.com/potepan1/" target="blank">
+                            <img src="img/footer-social-facebook.png" alt="facebook">
+                        </a>
+                        <a href="https://twitter.com/potepan0901" target="blank">
+                            <img src="img/footer-social-twitter.png" alt="twitter">
+                        </a>
+                    </div>
+                </div>
+                <div>
+                    <ul id="footer-menu">
+                        <a href="https://camp.potepan.com/about">
+                            <li id="footer-first-list"><span>ABOUT</span>初めての方へ</li>
+                        </a>
+                        <a href="https://camp.potepan.com/flow">
+                            <li><span>FLOW</span>卒業までの流れ</li>
+                        </a>
+                        <a href="https://camp.potepan.com/course">
+                            <li><span>COURSE</span>コース・料金</li>
+                        </a>
+                        <a href="https://camp.potepan.com/interview">
+                            <li><span>INTERVIEW</span>受講者の声</li>
+                        </a>
+                        <a href="https://camp.potepan.com/faq">
+                            <li><span>FAQ</span>よくある質問</li>
+                        </a>
+                        <a href="https://camp.potepan.com/company">
+                            <li><span>COMPANY</span>会社概要</li>
+                        </a>
+                        <a href="https://camp.potepan.com/contact">
+                            <li><span>MEDIA</span>掲載メディア</li>
+                        </a>
+                    </ul>
+                </div>
+                <div id="footer-character">
+                    <img src="img/footer-potepanda.png" alt="ポテパンダ">
+                </div>
+            </div>
+            <p id="copy">©2014-2021 POTEPAN.INC.</p>
+        </div>
+    </footer>
 </body>
 </html>
